frontend/tests/cases/negative/interfaces/bindings/unboundTyVarInFunConstraint.gr
interface Simple a

-- 'b' is not bound in the forall
simple1 : forall {a : Type} . {Simple b} => a -> a
simple1 x = x
